--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -11,13 +11,22 @@ services:
       - NODE_ENV=production
     env_file:
       - .env.prod
+    networks:
+      - seanamo_network
     restart: unless-stopped
 
-  cloudflare-tunnel:
-    image: cloudflare/cloudflared:latest
-    command: tunnel --no-autoupdate run
+  cloudflare-seanamoroso:
+    image: cloudflare/cloudflared
+    container_name: cloudflare-seanamoroso
+    restart: unless-stopped
+    command: tunnel run
     environment:
       - TUNNEL_TOKEN=${TUNNEL_TOKEN}
-    restart: unless-stopped
+    networks:
+      - seanamo_network
     depends_on:
       - seanamoroso
+
+networks:
+  seanamo_network:
+    driver: bridge
