fix: nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,15 +29,28 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         
+        # Error and access logs for debugging
+        error_log /var/log/nginx/error.log debug;
+        access_log /var/log/nginx/access.log;
+        
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         
-        # Static files with cache headers
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # Specific handling for JavaScript files
+        location ~* \.js$ {
+            add_header Content-Type application/javascript;
             expires 1y;
             add_header Cache-Control "public, immutable";
+            try_files $uri =404;
+        }
+        
+        # Static files with cache headers
+        location ~* \.(css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
         }
         
         # Main application
