fix: nginx stinx

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,19 +38,28 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         
-        # Specific handling for JavaScript files
-        location ~* \.js$ {
-            add_header Content-Type application/javascript;
+        # Static assets - more specific paths first
+        location /_app/ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
         }
         
-        # Static files with cache headers
-        location ~* \.(css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # All static files
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
+        }
+        
+        # Index.html - no caching
+        location = / {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            try_files /index.html =404;
+        }
+        
+        location = /index.html {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
         
         # Main application
