--- a/nginx.conf
+++ b/nginx.conf
@@ -29,42 +29,20 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         
-        # Error and access logs for debugging
-        error_log /var/log/nginx/error.log debug;
-        access_log /var/log/nginx/access.log;
-        
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        
-        # Static assets - more specific paths first
-        location /_app/ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
+        # Basic location block - serve files as-is
+        location / {
+            try_files $uri $uri/ /index.html;
         }
         
-        # All static files
+        # No cache for HTML
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+        }
+        
+        # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
-            try_files $uri =404;
-        }
-        
-        # Index.html - no caching
-        location = / {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            try_files /index.html =404;
-        }
-        
-        location = /index.html {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-        }
-        
-        # Main application
-        location / {
-            try_files $uri $uri/ /index.html;
         }
         
         # Health check
