--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,7 @@ http {
         
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            add_header Access-Control-Allow-Origin "*";
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
