--- a/nginx.conf
+++ b/nginx.conf
@@ -1,56 +1,19 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 80;
+    server_name _;
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    
-    sendfile on;
-    keepalive_timeout 65;
-    
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json;
+    root /usr/share/nginx/html;
+    index index.html;
 
-    server {
-        listen 80;
-        server_name _;
-        
-        root /usr/share/nginx/html;
-        index index.html;
-        
-        # Basic location block - serve files as-is
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-        
-        # No cache for HTML
-        location ~* \.html$ {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-        }
-        
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            add_header Access-Control-Allow-Origin "*";
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-        
-        # Health check
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
+    location / {
+        try_files $uri /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # Caching
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public, max-age=15552000, immutable";
     }
 }
